--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Syed Huzaifah
-Description: Welocome To Syed Huzaifah Website
+description: Welocome To Syed Huzaifah Website
